--- a/app/src/main/res/layout/fragment_vue_login.xml
+++ b/app/src/main/res/layout/fragment_vue_login.xml
@@ -115,10 +115,10 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/accepter"
                 android:text="@string/pas_de_compte_inscrivez_vous"
-                android:layout_marginBottom="30dp"
+                android:layout_marginTop="10dp"
                 app:cornerRadius="6dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnForgotPassword"
                 app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -162,7 +162,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85"
+        app:layout_constraintGuide_percent="0.95"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -178,7 +178,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1"
+        app:layout_constraintGuide_percent="0.05"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -186,7 +186,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.9"
+        app:layout_constraintGuide_percent="0.95"
         />
 
     <androidx.constraintlayout.widget.Guideline
